[package]
name = "qrcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qrcode = "0.12.0"
egui = "0.18.1"
eframe = "0.18.0"
image = { version = "0.24", features = ["jpeg", "png"] }
egui_extras = { version = "0.18.0", features = ["image"] }
qr_code = { version = "1.1.0", features = ["bmp"] }
bmp-monochrome = "1.0.0"
